// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate raw data correctly for 1 version and 2 prefixes 1`] = `
{
  "latest": {
    "": [
      {
        "p-text": {
          "children": "Second prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "primary",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
    "my-prefix": [
      {
        "p-text": {
          "children": "First prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "primary",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
  },
}
`;

exports[`should generate raw data correctly for 2 versions and 2 prefixes 1`] = `
{
  "2.18.0": {
    "": [
      {
        "p-text": {
          "children": "Second version first prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "default",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
    "my-prefix": [
      {
        "p-text": {
          "children": "Second version second prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "default",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
  },
  "latest": {
    "test-prefix": [
      {
        "p-text": {
          "children": "First version first prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "primary",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
    "test1-prefix": [
      {
        "p-text": {
          "children": "First version second prefix",
          "hostPdsComponent": null,
          "properties": {
            "align": "left",
            "color": "primary",
            "ellipsis": false,
            "size": "small",
            "tag": "p",
            "theme": "light",
            "weight": "regular",
          },
        },
      },
    ],
  },
}
`;

exports[`should retrieve children and hostPdsComponent correctly 1`] = `
{
  "latest": {
    "": [
      {
        "p-banner": {
          "children": "<span slot="title">Some notification title</span><span slot="description">(the content was stripped)</span>",
          "hostPdsComponent": null,
          "properties": {
            "description": "",
            "dismissButton": true,
            "heading": "",
            "open": false,
            "state": "info",
            "theme": "dark",
          },
        },
      },
      {
        "p-inline-notification": {
          "children": "<slot name="title" slot="heading"></slot><slot name="description"></slot>",
          "hostPdsComponent": "p-banner",
          "properties": {
            "actionIcon": "arrow-right",
            "actionLoading": false,
            "description": "",
            "dismissButton": true,
            "heading": "",
            "state": "info",
            "theme": "dark",
          },
        },
      },
      {
        "p-icon": {
          "children": null,
          "hostPdsComponent": "p-inline-notification",
          "properties": {
            "color": "notification-info",
            "name": "information-filled",
            "size": "small",
            "theme": "dark",
          },
        },
      },
      {
        "p-button-pure": {
          "children": "Close notification",
          "hostPdsComponent": "p-inline-notification",
          "properties": {
            "active": false,
            "alignLabel": "right",
            "disabled": false,
            "hideLabel": true,
            "icon": "close",
            "loading": false,
            "size": "small",
            "stretch": false,
            "theme": "dark",
            "type": "button",
            "weight": "regular",
          },
        },
      },
      {
        "p-icon": {
          "children": null,
          "hostPdsComponent": "p-button-pure",
          "properties": {
            "color": "primary",
            "name": "close",
            "size": "inherit",
            "theme": "dark",
          },
        },
      },
    ],
  },
}
`;

exports[`should retrieve children correctly and put stripped content 1`] = `
{
  "latest": {
    "": [
      {
        "p-flex": {
          "children": "<p-flex-item class="hydrated">(the content was stripped)</p-flex-item><p-flex-item class="hydrated">(the content was stripped)</p-flex-item>",
          "hostPdsComponent": null,
          "properties": {
            "alignContent": "stretch",
            "alignItems": "stretch",
            "direction": "row",
            "inline": false,
            "justifyContent": "flex-start",
            "wrap": "nowrap",
          },
        },
      },
      {
        "p-flex-item": {
          "children": "<p>1</p>",
          "hostPdsComponent": null,
          "properties": {
            "alignSelf": "auto",
            "flex": "initial",
            "grow": 0,
            "offset": "none",
            "shrink": 1,
            "width": "auto",
          },
        },
      },
      {
        "p-flex-item": {
          "children": "<p>2</p>",
          "hostPdsComponent": null,
          "properties": {
            "alignSelf": "auto",
            "flex": "initial",
            "grow": 0,
            "offset": "none",
            "shrink": 1,
            "width": "auto",
          },
        },
      },
    ],
  },
}
`;

exports[`should retrieve hostPdsComponent correctly 1`] = `
{
  "latest": {
    "": [
      {
        "p-button": {
          "children": "Test button",
          "hostPdsComponent": null,
          "properties": {
            "disabled": false,
            "hideLabel": false,
            "icon": "none",
            "loading": false,
            "theme": "light",
            "type": "submit",
            "variant": "primary",
          },
        },
      },
    ],
  },
}
`;

exports[`should retrieve object value from string correctly 1`] = `
{
  "latest": {
    "": [
      {
        "p-spinner": {
          "children": "
  
",
          "hostPdsComponent": null,
          "properties": {
            "aria": "{"aria-label":"Loading page content"}",
            "size": "{"base":"small","l":"medium"}",
            "theme": "light",
          },
        },
      },
    ],
  },
}
`;
